Production/01-02-2025/force-app/main/default/objects/Data_Supplier_Mapping__c/Data_Supplier_Mapping__c.object-meta.xml
<CustomObject>
    <label>Data Supplier Mapping</label>
    <nameField>
        <displayFormat>DSM-{0000000000}</displayFormat>
        <label>Data Supplier Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Data Supplier Mappings</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>