Production/01-02-2025/force-app/main/default/objects/Data_Supplier_Mapping__c/fields/Currency_Code__c.field-meta.xml
<CustomField>
    <fullName>Currency_Code__c</fullName>
    <formula>TEXT(Data_Supplier_Account__r.Currency_Code__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Currency Code</label>
    <type>Text</type>
</CustomField>