Production/01-02-2025/force-app/main/default/objects/Data_Supplier_Mapping__c/fields/Data_Supplier_Raw__c.field-meta.xml
<CustomField>
    <fullName>Data_Supplier_Raw__c</fullName>
    <label>Data Supplier Raw</label>
    <length>255</length>
    <type>Text</type>
</CustomField>