Production/01-02-2025/force-app/main/default/objects/Data_Supplier_Mapping__c/fields/Data_Type__c.field-meta.xml
<CustomField>
    <fullName>Data_Type__c</fullName>
    <formula>TEXT(Data_Supplier_Account__r.Data_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Data Type</label>
    <type>Text</type>
</CustomField>