Production/01-02-2025/force-app/main/default/objects/Data_Supplier_Mapping__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>CREATED_DATE</columns>
    <columns>OBJECT_ID</columns>
    <columns>Data_Supplier_Raw__c</columns>
    <columns>Data_Type__c</columns>
    <columns>Data_Supplier_Account__c</columns>
    <columns>Data_Supplier__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>